fix: select last item on mobile

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -12,6 +12,9 @@
 }
 
 @media (max-width: 736px) {
+  body {
+    padding-bottom: 5em;
+  }
   #more {
     display: inherit
   }
